perf: optimize for free-tier cloud services
- Redis (Upstash 10K/day): Increased cache TTL to 15min, lazy connections, efficient Bull settings
- RabbitMQ (CloudAMQP): Lazy queues, message TTLs, reduced prefetch to 5
- PostgreSQL (Neon): Connection pooler support, lightweight health checks
- Rate limiting: Less restrictive to reduce 429 responses
- Documentation: Added free-tier tips to prod.env.example

--- a/env/prod.env.example
+++ b/env/prod.env.example
@@ -5,6 +5,12 @@
 # Copy to env/prod.env and fill in REAL production values.
 #
 # SECURITY WARNING: Never commit this file with real values!
+#
+# FREE-TIER OPTIMIZED:
+# - Neon PostgreSQL: 3GB storage, use connection pooler URL (-pooler)
+# - Upstash Redis: 10K commands/day (app optimized for this)
+# - CloudAMQP: 1M messages/month, 20 connections (lazy queues enabled)
+# - Cloudinary: 25GB storage, 25K transformations/month
 # =============================================================================
 
 # =============================================================================
@@ -37,34 +43,51 @@ LOCKOUT_DURATION=3600
 # DATABASE - PostgreSQL (Production)
 # =============================================================================
 # Use managed database service (Neon, Supabase, AWS RDS, etc.)
+# FREE-TIER TIP: For Neon, use the connection pooler URL (contains -pooler)
+# Example: ep-xxx-pooler.region.aws.neon.tech (NOT ep-xxx.region.aws.neon.tech)
 DB_HOST=your-production-db-host.com
 DB_PORT=5432
 DB_USERNAME=your-db-user
 DB_PASSWORD=your-strong-db-password
 DB_DATABASE=carecircle_prod
 DB_SSL=true
-DATABASE_URL=postgresql://user:password@host:5432/carecircle_prod?sslmode=require
+DATABASE_URL=postgresql://user:password@ep-xxx-pooler.region.aws.neon.tech/neondb?sslmode=require
 
 # =============================================================================
 # REDIS (Production)
 # =============================================================================
 # Use managed Redis (Upstash, Redis Cloud, AWS ElastiCache, etc.)
+# FREE-TIER TIP: Upstash gives 10K commands/day. App is optimized with:
+# - 15-minute cache TTLs (reduces cache refreshes)
+# - Lazy connections (only connects when needed)
+# - Efficient Bull queue settings
 REDIS_HOST=your-production-redis-host.com
 REDIS_PORT=6379
 REDIS_PASSWORD=your-strong-redis-password
 REDIS_TLS=true
+# Optional: Upstash REST API (for serverless functions)
+UPSTASH_REDIS_REST_URL=https://your-redis.upstash.io
+UPSTASH_REDIS_REST_TOKEN=your-upstash-token
 
 # =============================================================================
 # MESSAGE QUEUE - RabbitMQ (Production)
 # =============================================================================
 # Use managed RabbitMQ (CloudAMQP, AWS MQ, etc.)
+# FREE-TIER TIP: CloudAMQP Little Lemur gives 1M messages/month. App uses:
+# - Lazy queues (stores messages on disk, saves memory)
+# - Message TTLs (auto-cleanup old messages)
+# - Reduced prefetch (5 instead of 10)
 AMQP_URL=amqps://user:password@your-rabbitmq-host.com/vhost
+# Individual settings (AMQP_URL takes precedence if set)
 AMQP_HOST=your-rabbitmq-host.com
 AMQP_USER=your-amqp-user
 AMQP_PASSWORD=your-strong-amqp-password
 AMQP_VHOST=production
 AMQP_PORT=5671
 AMQP_TLS=true
+# Optional overrides (app has optimal defaults)
+# RABBITMQ_PREFETCH=5
+# RABBITMQ_HEARTBEAT=60
 
 # =============================================================================
 # MQTT (Production)
