fix: update DATABASE_URL with channel_binding=require for Neon

--- a/env/cloud.env.example
+++ b/env/cloud.env.example
@@ -18,7 +18,7 @@ DB_USERNAME=your-neon-username
 DB_PASSWORD=your-neon-password
 DB_DATABASE=neondb
 DB_SSL=true
-DATABASE_URL=postgresql://your-username:your-password@ep-your-project-id.region.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL=postgresql://your-username:your-password@ep-your-project-id.region.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 # =============================================================================
 # REDIS (Upstash)
