--- a/env/prod.env.example
+++ b/env/prod.env.example
@@ -51,7 +51,7 @@ DB_USERNAME=your-db-user
 DB_PASSWORD=your-strong-db-password
 DB_DATABASE=carecircle_prod
 DB_SSL=true
-DATABASE_URL=postgresql://user:password@ep-xxx-pooler.region.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL=postgresql://user:password@ep-xxx-pooler.region.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 # =============================================================================
 # REDIS (Production)
