--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "db:push": "pnpm --filter @carecircle/database push",
     "db:generate": "pnpm --filter @carecircle/database generate",
     "db:studio": "pnpm --filter @carecircle/database studio",
+    "db:seed:admin": "pnpm --filter @carecircle/database seed:admin",
+    "deploy:db": "pnpm db:generate && pnpm db:migrate",
+    "deploy:db:seed": "pnpm db:generate && pnpm db:migrate && pnpm db:seed:admin",
     "lint": "turbo lint",
     "clean": "turbo clean && rm -rf node_modules",
     "postinstall": "pnpm --filter @carecircle/database generate",
