--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -19,14 +19,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
-    "prisma": "^5.10.0"
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/node": "^20.11.0",
     "bcrypt": "^5.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.0",
-    "@types/node": "^20.11.0"
+    "typescript": "^5.3.0"
   }
 }
-
