fix: fix email service to properly support Brevo SMTP - Update config to accept both SMTP_* and MAIL_* env vars - Fix mail.service.ts to route based on MAIL_PROVIDER - Add Brevo SMTP config to cloud.env

--- a/env/prod.env.example
+++ b/env/prod.env.example
@@ -111,13 +111,15 @@ CLOUDINARY_URL=cloudinary://api-key:api-secret@cloud-name
 # =============================================================================
 # EMAIL SERVICE (Production SMTP)
 # =============================================================================
-# Use SendGrid, AWS SES, or similar production email service
+# Recommended: Brevo (formerly Sendinblue) - Free tier: 300 emails/day
+# Alternatives: SendGrid, AWS SES, Mailgun
+# Important: MAIL_FROM must be a verified email in your provider's dashboard!
 MAIL_PROVIDER=smtp
-SMTP_HOST=smtp.sendgrid.net
+SMTP_HOST=smtp-relay.brevo.com
 SMTP_PORT=587
-SMTP_USER=apikey
-SMTP_PASS=your-sendgrid-api-key
-MAIL_FROM=noreply@your-domain.com
+SMTP_USER=your-brevo-login@smtp-brevo.com
+SMTP_PASS=your-brevo-smtp-key
+MAIL_FROM=your-verified-email@gmail.com
 MAIL_FROM_NAME=CareCircle
 
 # =============================================================================
