--- a/env/base.env.example
+++ b/env/base.env.example
@@ -49,17 +49,29 @@ CLOUDINARY_FOLDER=carecircle
 CLOUDINARY_URL=cloudinary://your-api-key:your-api-secret@your-cloud-name
 
 # =============================================================================
-# EMAIL SERVICE - MAILTRAP [OPTIONAL - for dev/testing]
+# EMAIL SERVICE [REQUIRED - Choose ONE provider]
 # =============================================================================
-# Sign up at: https://mailtrap.io/ (Free tier: 500 emails/month)
-# Get credentials from: Email Testing > Inboxes > SMTP Settings
-MAIL_PROVIDER=mailtrap
-MAILTRAP_HOST=sandbox.smtp.mailtrap.io
-MAILTRAP_PORT=2525
-MAILTRAP_USER=your-mailtrap-user
-MAILTRAP_PASS=your-mailtrap-pass
-MAIL_FROM=noreply@carecircle.com
+# OPTION 1: Brevo SMTP (Recommended for production)
+# Sign up at: https://app.brevo.com/ (Free tier: 300 emails/day)
+# Important: Verify your sender email in Brevo dashboard!
+MAIL_PROVIDER=smtp
+SMTP_HOST=smtp-relay.brevo.com
+SMTP_PORT=587
+SMTP_USER=your-brevo-smtp-login@smtp-brevo.com
+SMTP_PASS=your-brevo-smtp-key
+MAIL_FROM=your-verified-email@gmail.com
 MAIL_FROM_NAME=CareCircle
+
+# OPTION 2: Mailtrap (For development/testing only - emails don't reach real inboxes)
+# Sign up at: https://mailtrap.io/ (Free tier: 500 emails/month)
+# Uncomment below and comment out Brevo section above to use Mailtrap
+# MAIL_PROVIDER=mailtrap
+# MAILTRAP_HOST=sandbox.smtp.mailtrap.io
+# MAILTRAP_PORT=2525
+# MAILTRAP_USER=your-mailtrap-user
+# MAILTRAP_PASS=your-mailtrap-pass
+# MAIL_FROM=noreply@carecircle.com
+# MAIL_FROM_NAME=CareCircle
 
 # =============================================================================
 # PUSH NOTIFICATIONS - VAPID [OPTIONAL]
