refactor: remove AWS S3 and MinIO configurations from environment files and clean up related code
- Deleted AWS S3 and MinIO configuration options from `.env.example` and `.env.prod.example` files to streamline environment setup.
- Removed the `AwsS3Service` and `AwsModule` as they are no longer needed.
- Updated the `docker-compose.test.yml` to clarify its purpose for local testing.
- Enhanced the `package.json` scripts to include new end-to-end testing commands.
- Added Sentry integration for error monitoring in the API, including a new `SentryExceptionFilter` for global error handling.
- Implemented security improvements in the authentication process, including account lockout mechanisms and enhanced token validation in WebSocket connections.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,16 @@ env/*.env
 settings.local.json
 .claude/settings.local.json
 
+# Credential files (keys, certs, service accounts)
+*.pem
+*.key
+*.p12
+*.pfx
+*.jks
+credentials.json
+service-account*.json
+*-credentials.json
+
 #####################################################################
 # 2. Project Folders & Files to Ignore
 #####################################################################
