--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,8 +25,6 @@
     "db:studio": "prisma studio --schema=../../packages/database/prisma/schema.prisma"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.966.0",
-    "@aws-sdk/s3-request-presigner": "^3.966.0",
     "@golevelup/nestjs-rabbitmq": "^5.3.0",
     "@nestjs/bull": "^10.0.1",
     "@nestjs/common": "^10.3.0",
@@ -44,9 +42,9 @@
     "@nestjs/throttler": "^5.1.1",
     "@nestjs/websockets": "^10.3.0",
     "@prisma/client": "^5.10.0",
+    "@sentry/node": "^10.38.0",
     "@types/bcrypt": "^6.0.0",
     "@types/compression": "^1.8.1",
-    "argon2": "^0.31.2",
     "bcrypt": "^6.0.0",
     "bull": "^4.12.0",
     "class-transformer": "^0.5.1",
@@ -59,7 +57,6 @@
     "dotenv": "^16.4.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.3.2",
-    "jose": "^6.1.3",
     "nestjs-cls": "^3.6.0",
     "nestjs-i18n": "^10.4.0",
     "nodemailer": "^6.9.7",
