--- a/apps/workers/package.json
+++ b/apps/workers/package.json
@@ -12,28 +12,29 @@
     "test:cov": "jest --coverage"
   },
   "dependencies": {
+    "@carecircle/config": "workspace:*",
     "@carecircle/database": "workspace:*",
     "@carecircle/logger": "workspace:*",
-    "@carecircle/config": "workspace:*",
+    "@google/generative-ai": "^0.24.1",
     "bullmq": "^5.1.0",
-    "ioredis": "^5.3.2",
-    "web-push": "^3.6.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.0",
     "dotenv": "^16.4.0",
+    "ioredis": "^5.3.2",
     "nodemailer": "^6.9.0",
-    "twilio": "^5.0.0"
+    "twilio": "^5.0.0",
+    "web-push": "^3.6.0"
   },
   "devDependencies": {
-    "kill-port": "^2.0.1",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.11.0",
     "@types/nodemailer": "^6.4.0",
     "@types/web-push": "^3.6.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.0",
+    "kill-port": "^2.0.1",
     "ts-jest": "^29.1.0",
-    "@types/jest": "^29.5.0",
-    "jest-mock-extended": "^3.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   }
 }
