refactor: enhance AI module and services for improved functionality
- Updated the AiModule to include in-process processors for AI embedding and summary tasks, reducing the need for separate worker deployments in single-server setups.
- Enhanced the AiController with improved rate limiting and error handling, ensuring better user experience and API stability.
- Refined the GeminiService to support dynamic model configuration and improved error handling for AI operations.
- Added new methods in the RagService for better context building and source citation management, enhancing the quality of AI-generated responses.
- Implemented demo user restrictions across various services to prevent modifications, ensuring a secure experience for demo accounts.
- Updated package.json and pnpm-lock.yaml to include new dependencies and configurations for the motion library.

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -12,7 +12,8 @@
     "migrate": "npx prisma migrate dev",
     "migrate:deploy": "npx prisma migrate deploy",
     "seed": "ts-node prisma/seed.ts",
-    "seed:admin": "ts-node prisma/seed-admin.ts"
+    "seed:admin": "ts-node prisma/seed-admin.ts",
+    "seed:demo": "ts-node prisma/seed-demo.ts"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
