--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
     "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "lucide-react": "^0.303.0",
+    "motion": "^12.34.0",
     "next": "14.2.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
