refactor: improve error handling and database interactions in EmbeddingService
- Enhanced the EmbeddingService to include try-catch blocks for better error management during database operations.
- Updated SQL queries to specify the "public" schema for ai_embeddings, ensuring compatibility and clarity.
- Modified the build process in package.json to include database push and demo seeding steps, streamlining development setup.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:api": "pnpm --filter @carecircle/api dev",
     "dev:workers": "pnpm --filter @carecircle/workers dev",
     "build": "turbo build",
-    "build:render": "pnpm db:generate && turbo build --filter=@carecircle/api",
+    "build:render": "pnpm db:generate && pnpm db:push && turbo build --filter=@carecircle/api && pnpm db:seed:demo",
     "test": "turbo test",
     "test:e2e": "jest --config test/jest-e2e.json --runInBand",
     "test:e2e:api": "pnpm --filter @carecircle/api test:e2e",
