--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -20,12 +20,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
+    "bcryptjs": "^2.4.3",
     "prisma": "^5.22.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.0",
-    "bcrypt": "^5.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.0"
   }
